# data_notebooks-JC

./: !-JuypterNB-JC Review-Workspace.code-workspace  .gitignore  File Formats for Data Processing Guide.md  LICENSE  LangChain Talk.gslides  README.md  Time-Series Packages.ipynb  data_notebooks-JC.code-workspace
0-Ingest/: RestAPI 2 BigQuery 2 DataStudio.gdoc  coalesce_parquet.py  test BQ-SQL w INFO_SCHEMA & ASSERT.md
0-ingest_getTimeSeries/: !-timeseries JC NOTES.md  !-timeseries Tutorial Links  Indexing & Resampling TimeSeries PANDAS.ipynb  Pandas_Time_Series_Analysis_1_DatetimeIndex_and_Resample.ipynb  Pandas_Time_Series_Analysis_2_date_range.ipynb  Pandas_Time_Series_Analysis_4_to_datetime.ipynb  Pandas_Time_Series_Analysis_5_Period_and_PeriodIndex.ipynb  Pandas_Time_Series_Analysis_6_Timezone_Handling.ipynb  Pandas_Time_Series_Analysis_7_Shifting_and_Lagging.ipynb  timeseries_pandas-03-GMPs-Accessing Data.ipynb  timeseries_pandas-04-GMPs- Tidying Data.ipynb  timeseries_pandas-07-GMPs-Time Series.ipynb  timesserie_pandas-08-GMPs-Visualization.ipynb  working-with-Time-Series-in-Pandas.ipynb
1-EDA/: EDA_featureEvaluationGauge-eachFactor (1).ipynb  EDA_featureEvaluationGauge-eachFactor.ipynb  basicEDA_timeseries Stocks.ipynb  pandas EDA Snippets & Scratchpad.py
2-wrangle&Prep/: Python_Pandas_Tutorial_10_Pivot_table.ipynb  Python_Pandas_Tutorial_11_Reshape_dataframe_using_melt.ipynb  Python_Pandas_Tutorial_12_Stack_Unstack.ipynb  (+8 more)
poetry-project/: poerty - Setup MacOS TorchlightAI - Poetry.md  poetry Cheatsheet.md  poetry INSTALL.md  pyproject.toml
(+172 files in other folders)
