[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["Jonathan Cachat, PhD <github@jcachat.com>"]
readme = "README.md"
packages = [{include = "poetry_project"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
